Refactoring of ChatGPT code